@@ -26,6 +26,8 @@ PIG-5282: Upgade to Java 8 (satishsaley via rohini)
  
 IMPROVEMENTS
 
+PIG-5382: Log the name when POStore fails on write (knoguchi)
+
 PIG-5255: Improvements to bloom join (satishsaley via rohini)
 
 PIG-5359: Reduce time spent in split serialization (satishsaley via rohini)
